--- a/Music2Web.de/Music2Web/Music2Web.csproj
+++ b/Music2Web.de/Music2Web/Music2Web.csproj
@@ -65,8 +65,22 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <AndroidResource Remove="Music2Web.Navigation\**" />
+	  <Compile Remove="Music2Web.Navigation\**" />
+	  <EmbeddedResource Remove="Music2Web.Navigation\**" />
+	  <MauiCss Remove="Music2Web.Navigation\**" />
+	  <MauiXaml Remove="Music2Web.Navigation\**" />
+	  <None Remove="Music2Web.Navigation\**" />
+	</ItemGroup>
+
+	<ItemGroup>
 		<PackageReference Include="Microsoft.Maui.Controls" Version="$(MauiVersion)" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="9.0.0" />
+		<PackageReference Include="Syncfusion.Maui.Toolkit" Version="1.0.7" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <ProjectReference Include="..\Music2Web.Navigation\Music2Web.Navigation.csproj" />
 	</ItemGroup>
 
 	<ItemGroup>
