feat: Added a view model for the navigation view

--- a/Music2Web.de/Music2Web.Navigation/Music2Web.Navigation.csproj
+++ b/Music2Web.de/Music2Web.Navigation/Music2Web.Navigation.csproj
@@ -67,4 +67,12 @@
 	  </MauiXaml>
 	</ItemGroup>
 
+	<ItemGroup>
+	  <Folder Include="Adapters\" />
+	  <Folder Include="Core\" />
+	  <Folder Include="Ports\Drivers\" />
+	  <Folder Include="ValueObjects\" />
+	  <Folder Include="Ports\Driven\" />
+	</ItemGroup>
+
 </Project>
