--- a/Music2Web.de/Music2Web/Music2Web.csproj
+++ b/Music2Web.de/Music2Web/Music2Web.csproj
@@ -55,7 +55,8 @@
 
 		<!-- Images -->
 		<MauiImage Include="Resources\Images\*" />
-		<MauiImage Update="Resources\Images\dotnet_bot.png" Resize="True" BaseSize="300,185" />
+		<MauiImage Update="Resources\Images\header.png" Resize="True" BaseSize="303,49" />
+		<MauiImage Update="Resources\Images\logo.png" Resize="True" BaseSize="303,49" />
 
 		<!-- Custom Fonts -->
 		<MauiFont Include="Resources\Fonts\*" />
