feat: Added navigational mock content

--- a/Music2Web.de/Music2Web.Navigation/Music2Web.Navigation.csproj
+++ b/Music2Web.de/Music2Web.Navigation/Music2Web.Navigation.csproj
@@ -68,10 +68,11 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <Folder Include="Adapters\" />
+	  <Folder Include="Adapters\Driven\Implementation\" />
+	  <Folder Include="Adapters\Driven\Mock\" />
+	  <Folder Include="Adapters\Drivers\" />
 	  <Folder Include="Core\" />
 	  <Folder Include="Ports\Drivers\" />
-	  <Folder Include="ValueObjects\" />
 	  <Folder Include="Ports\Driven\" />
 	</ItemGroup>
 
